# quickjs-java

./: update_quickjs.sh
.github/workflows/: build.yaml
quickjs/common/native/: CMakeLists.txt
quickjs/common/native/quickjs/: CMakeLists.txt
